# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: GameOfLife.cpp  GameOfLife.h  main.cpp
